# Harness-TrajecDebug

./: .gitattributes  .gitignore  AGENT_MIGRATION_RUNBOOK.md  LICENSE  Makefile  README.md  app.js  index.html  pyproject.toml  styles.css
api/: diagnose.py
demo/: README.md  query-optimize-trace-to-card.sh
docs/: agent-plugin.md  candidate-kimi-rerun-status.md  candidate-search-status.md  card-level-five-case-summary.md  closed-loop-case-summary.md  codex-failure-pool-audit.md  demo-query-optimize-trace-to-card.md  failure-taxonomy.md  framework.md  integrations.md  interactive-icl-swebenchpro.md  interactive-icl-v1-implementation.md  one-click-query-optimize-repro.md  query-optimize-skill-repro-20260611.md  related-work-metaharness.md  roadmap.md  tb21-kimi-k26-raw-log-manifest.md  tb21-kimi-k26-trajectorydebug-lift.md  trajectorydebug-hint-and-icl-flow.md
harbor_adapters/: __init__.py  cancel_async_tasks_previous_failure.txt  kimi_code_host_agent.py
local_harbor_agents/: claude_code_interactive_icl.py  claude_code_node20.py  interactive_icl_driver.py
scripts/: aggregate_icl_results.py  audit_codex_failure_pool.py  build_harbor_icl_baseline.py  build_icl_task_matrix.py  build_joint_failure_matrix.py  build_query_optimize_fail_debug_action_card.py  check_debug_action_closure.py  check_model_endpoint.py  collect_kimi_session_records.py  compute_tb21_fresh_td_numbers.py  compute_tb21_kimi_td_lift.py  demo_query_optimize_trace_to_card.sh  install_agent_plugin.py  install_harness_runtime_icl_skill.sh  launch_query_optimize_sdk_live_repro.py  lib_endpoint_profile.sh  (+28 more)
(+417 files in other folders)
